[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vritraai"
version = "0.30.0"
description = "An intelligent, AI-enhanced terminal shell with advanced features, beautiful theming, and powerful command execution capabilities"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Alex Butler", email = "contact@vritrasec.com"}
]
maintainers = [
    {name = "Alex Butler", email = "contact@vritrasec.com"}
]
keywords = ["terminal", "shell", "ai", "cli", "command-line", "assistant", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Shells",
    "Topic :: System :: System Shells",
    "Topic :: Terminals",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Environment :: Console",
]
dependencies = [
    "openai==0.28.0",
    "requests>=2.28.0",
    "prompt-toolkit>=3.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
optional = [
    "pygments>=2.13.0",
    "psutil>=5.9.0",
]
formatting = [
    "black>=23.0.0",
    "autopep8>=2.0.0",
]
all = [
    "pygments>=2.13.0",
    "psutil>=5.9.0",
    "black>=23.0.0",
    "autopep8>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/VritraSecz/VritraAI"
Documentation = "https://vritraai.vritrasec.com/"
Repository = "https://github.com/VritraSecz/VritraAI"
"Bug Reports" = "https://github.com/VritraSecz/VritraAI/issues"
Website = "https://vritrasec.com"

[project.scripts]
vritraai = "vritraai:main"

[tool.setuptools]
py-modules = ["vritraai", "config_manager", "config"]

[tool.setuptools.package-data]
"*" = ["README.md", "LICENSE", "requirements.txt"]

